--- a/front/index.html
+++ b/front/index.html
@@ -3,6 +3,7 @@
 <div class="metrics"></div>
 <div class="switch">Stop transfert</div>
 <div class="explaination"></div>
+<div class="scan-now">scan now</div>
 
 <script src="bundle.js"></script>
 <link rel="stylesheet" href="bundle.css"></link>
